# threads_test_task

./: README.md
Applications/Logger/: CMakeLists.txt
Applications/Logger/src/: main.cpp
Applications/UnitTests/: .gitignore  CmakeLists.txt
Applications/UnitTests/scripts/: components.cmake  unit_tests.cmake
Applications/UnitTests/src/: main.cpp
Components/Context/src/: context_Types.h
Components/Context/src/Checker/: context_Checker.cpp  context_Checker.h
Components/Context/src/Context/: context_Context.cpp  context_Context.h
Components/Context/src/IdGenerator/: context_IdGenerator.cpp  context_IdGenerator.h
Components/Context/unit_tests/ContextChecker/: context_ContextCheckerTest.cpp
Components/Context/unit_tests/IdGenerator/: context_IdGeneratorTest.cpp
Components/Exceptions/src/CustomException/: exceptions_CustomException.h
Components/Logger/src/Context/: logger_Context.cpp  logger_Context.h
Components/Logger/src/Processor/: logger_IProcessor.h  logger_Processor.cpp  logger_Processor.h  logger_mock_Processor.h  logger_stub_Processor.cpp  logger_stub_Processor.h
Components/Logger/src/Task/: logger_Task.cpp  logger_Task.h
Components/Logger/src/ThreadSafeLogger/: logger_IThreadSafeLogger.h  logger_ThreadSafeLogger.cpp  logger_ThreadSafeLogger.h  logger_mock_ThreadSafeLogger.h
Components/Logger/unit_tests/Processor/: logger_ProcessorTest.cpp
Components/Logger/unit_tests/Task/: logger_TaskTest.cpp
Components/Logger/unit_tests/ThreadSafeLogger/: logger_ThreadSafeLoggerTest.cpp
Components/Main/src/Main/: main_Main.cpp
(+18 files in other folders)
